// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenEarningsBox-Component Matches SnapShot with Values 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.c1 {
  text-align: center;
  font-size: 12px;
}

.c2 {
  color: #D1D5DB;
}

.c3 {
  text-align: center;
  font-weight: 500;
  font-size: 20px;
}

.c5 {
  color: #9CA3AF;
}

.c4 {
  color: #60E6C5;
}

<div
    className="c0"
    data-testid="TokenEarningsBox"
  >
    <p
      className="chakra-text c1 c2 css-fzhz6b"
      sub="false"
    >
      Your APR
    </p>
    <p
      className="chakra-text c3 c4 css-fzhz6b"
      sub="false"
    >
      3.454
    </p>
    <p
      className="chakra-text c1 c5 css-fzhz6b"
      sub="false"
    >
      ≈ $
      0.95
    </p>
  </div>,
  <span />,
]
`;

exports[`TokenEarningsBox-Component Matches SnapShot without Values 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.c1 {
  text-align: center;
  font-size: 12px;
}

.c2 {
  color: #D1D5DB;
}

.c3 {
  text-align: center;
  font-weight: 500;
  font-size: 20px;
}

<div
    className="c0"
    data-testid="TokenEarningsBox"
  >
    <p
      className="chakra-text c1 c2 css-fzhz6b"
      sub="false"
    />
    <p
      className="chakra-text c3 css-fzhz6b"
      sub="false"
    />
  </div>,
  <span />,
]
`;